--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -5,26 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prediction Result</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            text-align: center; /* Сдвигаем текст в центр экрана */
-            font-family: 'Comic Sans MS', cursive; /* Выбираем шрифт Comic Sans */
-            background-color: #f0f0f0; /* Цвет фона */
-            margin-top: 50px; /* Отступ сверху */
+            text-align: center; 
+            background-color: #f5f5f5; 
+            font-family: 'Roboto', sans-serif; 
+            color: #333; 
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         h1 {
-            color: #333; /* Цвет заголовка */
+            color: #FF3333; 
+            margin-bottom: 50px;
         }
         p {
-            color: #555; /* Цвет текста */
-            font-size: 20px; /* Размер текста */
-            margin-top: 20px; /* Отступ сверху */
+            font-size: 20px; 
+        }
+        .prediction {
+            color: #FF3333; 
+        }
+        img {
+            max-width: 90%;
+            height: auto;
+            box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+            margin-top: 50px;
+        }
+        span {
+            display: flex;
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 10px;
+            font-size: 24px;
+            color:#FF3333; 
+        }
+        .home-link {
+            position: absolute;
+            top: 5%;
+            left: 5%;
+        }
+        .home-link img {
+            width: 40px;
+            height: 40px;
         }
     </style>
 </head>
 <body>
-    <h1>Prediction Result:</h1>
-    <p>The predicted class is: {{ prediction }}</p>
-    <img src="https://www.ryazagro.ru/upload/iblock/b34/kir.jpg" alt="Kitten" style="max-width: 100%; height: auto;">
+    <a href="/" class="home-link"><img src="https://www.ryazagro.ru/upload/iblock/b34/kir.jpg"></a>
+    <span>Your Prediction Result</span>
+    <h1>Prediction:</h1>
+    <p>The predicted class is: <span class="prediction">{{ predictions }}</span></p>
 </body>
 </html>
